refactor project structure, update docs, and refresh README with project icon